@@ -1,3 +1,10 @@
+2010-04-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* jira2.el (jira2-token): new variable
+	(jira2-login): login into the jira web application as well.
+	(jira2-link-issue): new function, uses JIRA web interface instead
+	of the SOAP api
+
 2010-03-31  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-load-wsdl-from-url): check that we have
